--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 
-* Synthesis tools palette for the synthesis network router
+* Synthesis tools palette for the synthesis network router and
+  many other GUI improvements
 * Enabled procedure support for the pattern editor to supply
   spreadsheet like editing facilities
 * Synthesis instruments, i.e. use of synthesis networks as song
