--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 22 04:02:46 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/glewidgets.[hc]: pulled new widgets.
+
 Thu Feb 10 23:55:37 2000  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvassource.c (bst_canvas_icon_set): arg, fighting
