--- a/beast-gtk/TODO
+++ b/beast-gtk/TODO
@@ -1,5 +1,8 @@
+bugs:
+-	if output params in proc, provide own status bar
+-	select/none + select/invert unselects focus
+
 important:
--	document pattern keys
 -	sane default sizes for windows
 -	write up basic blurb 1)new song 2) instrument+sample 3) pattern etc..
 -	how to get instruments going in a pattern
