--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar  8 12:28:19 2000  Tim Janik  <timj@gtk.org>
+
+	* bsesong.c (bse_song_remove_item): remove references to
+	removed pattern from pattern groups.
+
 Mon Mar  6 23:47:46 2000  Tim Janik  <timj@gtk.org>
 
 	* bsesong.[hc]: added pattern group support:
