use destroy notification instead of reference counting, some code
Fri Mar 10 22:20:37 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstitemview.c (bst_item_view_set_container): use destroy
        notification instead of reference counting, some code cleanups.

        * beast-gtk/TODO: clean ups.

svn path=/trunk/; revision=226

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Mar 10 22:20:37 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstitemview.c (bst_item_view_set_container): use destroy
+	notification instead of reference counting, some code cleanups.
+
+	* beast-gtk/TODO: clean ups.
+
 Wed Mar  8 12:51:58 2000  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstdraggroup.c (drag_group_drag_data_received): move
